--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,4 +23,9 @@ security.password = cd60e42c-fa35-4e85-aab0-4302b3f35d56
 spring.main.allow-bean-definition-overriding=true
 
 #ElasticSearch
+spring.data.elasticsearch.cluster-names=elasticsearch
+spring.data.elasticsearch.cluster-node=localhost:9200
 spring.data.elasticsearch.repositories.enabled=true
+# lMSC0nRFEIcaD66I69tp
+#spring.elasticsearch.index-name=sms_index
+#spring.data.elasticsearch.auto-index-creation=true
