--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.data.redis.password=GWdlA5XNURwdkTpLLcvdA7eanRhYiRQl
 
 #Spring Security
 #spring.security.user.name=user
-security.password = cd60e42c-fa35-4e85-aab0-4302b3f35d56
+#security.password = cd60e42c-fa35-4e85-aab0-4302b3f35d56
 #spring.security.user.password=cd60e42c-fa35-4e85-aab0-4302b3f35d56
 
 # Bean Overriding
@@ -26,6 +26,6 @@ spring.main.allow-bean-definition-overriding=true
 spring.data.elasticsearch.cluster-names=elasticsearch
 spring.data.elasticsearch.cluster-node=localhost:9200
 spring.data.elasticsearch.repositories.enabled=true
-# lMSC0nRFEIcaD66I69tp
+
 #spring.elasticsearch.index-name=sms_index
 #spring.data.elasticsearch.auto-index-creation=true
